--- a/report.pug
+++ b/report.pug
@@ -3,14 +3,16 @@ html(lang="en")
   head
     title=title
     link(rel="stylesheet", href="https://unpkg.com/purecss@0.6.2/build/pure-min.css", integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous")
+    link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/balloon-css/0.2.4/balloon.min.css")
     link(rel="stylesheet", href="report.css")
     meta(name="viewport", content="width=device-width, initial-scale=1")
+    script(src="report.js")
   body
     table.pure-table.pure-table-bordered.report-table
       thead
         th=short_title
         - for (let col of table._cols)
-          th=col
+          th(data-balloon=(remap[col] || [col]).join(', '), data-balloon-pos="down")=col
       tbody
         - for (let row of table._rows)
           tr
