Display some headings and a help paragraph in reports

--- a/report/report.pug
+++ b/report/report.pug
@@ -8,6 +8,10 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1")
     script(src="../report.js")
   body
+    h1=title
+
+    h2="Domains"
+    p="The table below shows how many times a developer (rows) has used an API from a domain (columns). Hover over the domain name to see which modules (that were used in the project) belong to the domain."
     table.pure-table.pure-table-bordered.report-table
       thead
         th=short_title
