--- a/report/report.pug
+++ b/report/report.pug
@@ -11,3 +11,4 @@ html(lang="en")
     h1=title
     p=`This is a report for the ${short_title} project. The sections below can be used to identify Islands Of Knowledge`
     include report-domains
+    include report-remap
