Show total number of api uses per domain

--- a/report/report-domains.pug
+++ b/report/report-domains.pug
@@ -8,6 +8,13 @@ table.pure-table.pure-table-bordered.report-table
     - for (let col of table._cols)
       th(data-balloon=(remap[col] || [col]).join(', '), data-balloon-pos="down")=col
   tbody
+    tr
+      td.report-row-header
+        em="total"
+      td=sum(Array.from(table._rows.keys()).map(row => sum(table.getRow(row))))
+      - for (let col of table._cols)
+        td.report-cell=sum(table.getCol(col))
+
     - for (let row of table._rows)
       tr
       td.report-row-header=row
