--- a/report/report-domains.pug
+++ b/report/report-domains.pug
@@ -20,4 +20,4 @@ table.pure-table.pure-table-bordered.report-table
       td.report-row-header=row
       td=sum(table.getRow(row))
       - for (let col of table._cols)
-        td.report-cell=table.get(row, col)
+        td(class=`report-cell report-heat-${heatmap.get(row, col)}`)=table.get(row, col)
