--- a/report/report.css
+++ b/report/report.css
@@ -21,3 +21,16 @@ td.report-row-header {
 body {
   padding: 8px;
 }
+
+.report-cell { text-align: center; }
+
+.report-table .report-heat-0 { background-color: #FFFFFF; color: black; }
+.report-table .report-heat-1 { background-color: #FFE2E2; color: black; }
+.report-table .report-heat-2 { background-color: #FFC6C6; color: black; }
+.report-table .report-heat-3 { background-color: #FFAAAA; color: black; }
+.report-table .report-heat-4 { background-color: #FF8D8D; color: black; }
+.report-table .report-heat-5 { background-color: #FF7171; color: white; }
+.report-table .report-heat-6 { background-color: #FF5555; color: white; }
+.report-table .report-heat-7 { background-color: #FF3838; color: white; }
+.report-table .report-heat-8 { background-color: #FF1C1C; color: white; }
+.report-table .report-heat-9 { background-color: #FF0000; color: white; }
