--- a/report/report.pug
+++ b/report/report.pug
@@ -7,6 +7,7 @@ html(lang="en")
     link(rel="stylesheet", href="../report.css")
     meta(name="viewport", content="width=device-width, initial-scale=1")
     script(src="../report.js")
+    script=`console.dir(JSON.parse(${JSON.stringify(domains)}))`
   body
     h1=title
     p=`This is a report for the ${short_title} project. The sections below can be used to identify Islands Of Knowledge`
