--- a/report/report.css
+++ b/report/report.css
@@ -14,6 +14,10 @@ td.report-row-header {
   border-bottom: 1px solid #cbcbcb;
 }
 
+.report-table a {
+  color: black;
+}
+
 .report-table td, .report-table th {
   padding: 2px;
 }
@@ -22,7 +26,7 @@ body {
   padding: 8px;
 }
 
-.report-cell { text-align: center; }
+.report-cell { text-align: right; }
 
 .report-table .report-heat-0 { background-color: #FFFFFF; color: black; }
 .report-table .report-heat-1 { background-color: #FFE2E2; color: black; }
@@ -34,3 +38,7 @@ body {
 .report-table .report-heat-7 { background-color: #FF3838; color: white; }
 .report-table .report-heat-8 { background-color: #FF1C1C; color: white; }
 .report-table .report-heat-9 { background-color: #FF0000; color: white; }
+
+.hidden {
+  display: none;
+}
