--- a/report/report.pug
+++ b/report/report.pug
@@ -7,7 +7,8 @@ html(lang="en")
     link(rel="stylesheet", href="../report.css")
     meta(name="viewport", content="width=device-width, initial-scale=1")
     script(src="../report.js")
-    script=`console.dir(JSON.parse(${JSON.stringify(domains)}))`
+    script(src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc=" crossorigin="anonymous")
+    //- script=`console.dir(JSON.parse(${JSON.stringify(domains)}))`
   body
     h1=title
     p=`This is a report for the ${short_title} project. The sections below can be used to identify Islands Of Knowledge`
