--- a/report/report-domains.pug
+++ b/report/report-domains.pug
@@ -32,7 +32,7 @@ table.pure-table.pure-table-bordered.report-table
       - for (let col of domains._cols)
         td.report-cell=sum(domains.getCol(col))
         - for (let mod of remap[col] || [])
-          td(class=`report-cell-module report-cell-dom-${col} hidden`)
+          td(class=`report-cell-module report-cell-dom-${col} hidden`)=sum(modules.getCol(mod))
 
     - for (let row of domains._rows)
       tr
