Describe the click function

--- a/report/report-domains.pug
+++ b/report/report-domains.pug
@@ -1,5 +1,6 @@
 h2="Domains"
-p="The table below shows how many times a developer (rows) has used an API from a domain (columns). Hover over the domain name to see which modules (that were used in the project) belong to the domain. The cell's are colorized like a heatmap, respective to the fraction of the number of API useages by a developer in a domain. Hover over the cells to reveal the percentage."
+p="The table below shows how many times a developer (rows) has used an API from a domain (columns). Hover over the domain name to see which modules (that were used in the project) belong to the domain. Click the domain name to reveal the numbers of useages of its modules."
+p="The cell's are colorized like a heatmap, respective to the fraction of the number of API useages by a developer in a domain. Hover over the cells to reveal the percentage."
 table.pure-table.pure-table-bordered.report-table
   tbody
     tr
