Describe the keywords hover in remap

--- a/report/report-remap.pug
+++ b/report/report-remap.pug
@@ -1,5 +1,5 @@
 h2="Remap"
-p="The table below shows which modules and global objects the domains comprise. Hover over a module"
+p="The table below shows which modules and global objects the domains comprise. Domains are derived from a module's keywords. The module's most used keyword is used as its domain. Hover over a module to show all of its keywords and number of times that keyword has been used in the NPM registry."
 table.pure-table.pure-table-bordered
   thead
     th="Domain"
