--- a/report/report.pug
+++ b/report/report.pug
@@ -4,9 +4,9 @@ html(lang="en")
     title=title
     link(rel="stylesheet", href="https://unpkg.com/purecss@0.6.2/build/pure-min.css", integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous")
     link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/balloon-css/0.2.4/balloon.min.css")
-    link(rel="stylesheet", href="../report.css")
+    link(rel="stylesheet", href="report.css")
     meta(name="viewport", content="width=device-width, initial-scale=1")
-    script(src="../reveal.js")
+    script(src="reveal.js")
     script(src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc=" crossorigin="anonymous")
     //- script=`console.dir(JSON.parse(${JSON.stringify(domains)}))`
   body
