Show condensed mailmap in report

--- a/lib/report/report.pug
+++ b/lib/report/report.pug
@@ -14,3 +14,4 @@ html(lang="en")
     p=`This is a report for the ${short_title} project. The sections below can be used to identify Islands Of Knowledge`
     include report-domains
     include report-remap
+    include report-mailmap
