--- a/lib/report/report-mailmap.pug
+++ b/lib/report/report-mailmap.pug
@@ -5,10 +5,9 @@ if mailmap
     thead
       th="Proper Name/Email"
       th="Commit Name/Email"
-      //- tbody.report-table
     tbody
-      - for (let line of mailmap)
-        if line[1]
+      - for (let i = 0; i < mailmap.length; i++)
+        if mailmap[i][1]
           tr
-            td(style="text-align: right;")=line[0]
-            td=line[1]
+            td(style="text-align: right;")=mailmap[i - 1][0] !== mailmap[i][0] ? mailmap[i][0] : ""
+            td=mailmap[i][1]
