--- a/lib/report/report-mailmap.pug
+++ b/lib/report/report-mailmap.pug
@@ -10,5 +10,5 @@ if mailmap
       - for (let i = 0; i < mailmap.length; i++)
         if mailmap[i][1]
           tr
-            td(style="text-align: right;")=mailmap[i - 1][0] !== mailmap[i][0] ? mailmap[i][0] : ""
+            td(style="text-align: right;")=(mailmap[i - 1] || [undefined])[0] !== mailmap[i][0] ? mailmap[i][0] : ""
             td=mailmap[i][1]
